--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -11,7 +11,8 @@
 {% endif %}
 	
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" type="text/css" />
-	<link rel="stylesheet" href="{{ theme_url }}/style.css" type="text/css" />
+	<link rel="stylesheet" href="{{ theme_url }}/stylesheets/style.css" type="text/css" />
+	
 	
 	<script src="{{ theme_url }}/scripts/modernizr-2.6.1.min.js"></script>
 </head>
@@ -29,7 +30,9 @@
 	</header>
 
 	<section id="content">
+
 		<div class="inner">
+			<hr>
 			{{ content }}
 		</div>
 	</section>
