--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" type="text/css" />
 	<link rel="stylesheet" href="{{ theme_url }}/stylesheets/style.css" type="text/css" />
 	
-	
+	<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
+
 	<script src="{{ theme_url }}/scripts/modernizr-2.6.1.min.js"></script>
 </head>
 <body>
@@ -32,7 +33,6 @@
 	<section id="content">
 
 		<div class="inner">
-			<hr>
 			{{ content }}
 		</div>
 	</section>
