--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -51,8 +51,10 @@
 	<footer id="footer">
 		<div class="inner">
 			<hr>
-			<a href="http://pico.dev7studios.com">Pico</a> was made by <a href="http://gilbert.pellegrom.me">Gilbert Pellegrom</a> 
-			from <a href="http://dev7studios.com">Dev7studios</a>.
+
+
+			*There is nothing else to see here. Move along.*
+
 		</div>
 	</footer>
     
