--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -20,8 +20,7 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'> 
 
-
-	<script src="{{ theme_url }}/scripts/modernizr-2.6.1.min.js"></script>
+	
 </head>
 <body>
 
@@ -55,11 +54,29 @@
 	<footer id="footer">
 		<div class="inner clearfix">
 			<hr>
+{% if is_front_page %}
 
+{% else %}
+	<div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'patrickemclean'; // required: replace example with your forum shortname
 
-			*There is nothing else to see here. Move along.*
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
+{% endif %}
+ 
 		</div>
+
+
 	</footer>
     
 </body>
