--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -20,6 +20,12 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'> 
 
+	<link rel=”alternate” type=”application/rss+xml” title=”Patrick E. McLean (RSS 2.0)” href=”http://feeds.feedburner.com/PatrickEMclean” />
+
+	<link rel=”alternate” type="application/atom+xml"
+	 title=”Patrick E. McLean (RSS 2.0)” href=”http://feeds.feedburner.com/PatrickEMclean” />
+
+
 	<script type="text/javascript">
 
   var _gaq = _gaq || [];
