updated subscribe link on homepage

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -91,7 +91,7 @@
 
 	<hr>
 
-	<div class="subscribe">If you've made it this far, why not <a href="#">subscribe?</a></div> <br>
+	<div class="subscribe">If you've made it this far, why not <a href="./subscribe">subscribe?</a></div> <br>
 
 <div class="searchblob">
 
