--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -122,7 +122,7 @@
 
 	<div id="disqus_thread"></div>
     <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        
         var disqus_shortname = 'patrickemclean'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
@@ -141,6 +141,6 @@
 
 
 	</footer>
-    
+    <script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/a1a4b159131cd1bea47acdca5893c82aaa2acae7.js"></script>
 </body>
 </html>
