--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -112,6 +112,7 @@
 				{% if a==0 %} 
 					{% if page.author != "Video" %}
 						{% set a=1 %} 
+						<div class="tinydate"> {{ page.date }} </div>
 						<h1>{{ page.title }}</h1>
 						{{ page.content }}
 					{% endif %}
