--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -267,8 +267,8 @@
 
 	</footer>
 
-<!-- https://app.hellobar.com/ -->
+<!-- https://app.hellobar.com/ 
 
-    <script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/a1a4b159131cd1bea47acdca5893c82aaa2acae7.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/a1a4b159131cd1bea47acdca5893c82aaa2acae7.js"></script> -->
 </body>
 </html>
