fixed archive page

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -168,7 +168,7 @@
 					
 				   	<tr>
 
-				    	<td><span class="postdate">{{ page.date|date("m/d") }}</span></td> 
+				    	<td><span class="postdate">{{ page.date|date("m/d/y") }}</span></td> 
 				    	<td class="title"><a href="{{ page.url }}">{{ page.title }}</a></td>
 
 				    </tr>
