touched up menu

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -64,9 +64,9 @@
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
 
 			<div class="headertype">
-				PRESENTING YOU WITH MANY PAGES INCLUDING:<BR>
+			
 
-				<a href="{{ base_url }}/about">ABOUT, <a href="{{ base_url }}/contact">CONTACT, </a><a href="{{ base_url }}/books">BOOKS</a>, and <a href="{{ base_url }}/speaking">SPEAKING/TEACHING</a>  
+				<a href="{{ base_url }}/about">ABOUT </a>| <a href="{{ base_url }}/archive">ARCHIVE </a>| <a href="{{ base_url }}/contact">CONTACT </a>| <a href="{{ base_url }}/books">BOOKS </a>| <a href="{{ base_url }}/speaking">SPEAKING/TEACHING </a>  
 			</div>
 
 		</div>
