--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -56,9 +56,20 @@
 <body>
 
 
+
+
+
+
+
+
 	<header id="header">
+
+
+
+
 		<div class="inner clearfix">
 			<div class="headertype">
+				<div><a href="{{ base_url }}/subscribe">SUBSCRIBE TO</a></div> 
 				THE OFFICIAL-LOOKING WEBSITE OF WRITER
 			</div>
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
@@ -68,6 +79,24 @@
 
 				<a href="{{ base_url }}/about">ABOUT </a>| <a href="{{ base_url }}/archive">ARCHIVE </a>| <a href="{{ base_url }}/contact">CONTACT </a>| <a href="{{ base_url }}/books">BOOKS </a>| <a href="{{ base_url }}/speaking">SPEAKING/TEACHING </a>  
 			</div>
+
+				<div id="headersearch">
+
+
+			<script>
+			  (function() {
+			    var cx = '000518898980765515244:8nss_auknps';
+			    var gcse = document.createElement('script');
+			    gcse.type = 'text/javascript';
+			    gcse.async = true;
+			    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+			        '//www.google.com/cse/cse.js?cx=' + cx;
+			    var s = document.getElementsByTagName('script')[0];
+			    s.parentNode.insertBefore(gcse, s);
+			  })();
+			</script>
+			<gcse:search></gcse:search>
+		</div>
 
 		</div>
 	</header>
