styled subscribe text and made it a sentence

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -69,7 +69,7 @@
 
 		<div class="inner clearfix">
 			<div class="headertype">
-				<div><a href="{{ base_url }}/subscribe">SUBSCRIBE TO</a></div> 
+				<div id="headersubscribe">Why not <a href="{{ base_url }}/subscribe">SUBSCRIBE</a> to</div>
 				THE OFFICIAL-LOOKING WEBSITE OF WRITER
 			</div>
 			<h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
