added writing resources page

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -82,7 +82,7 @@
 
         <header class="page-introduction">
           <h1>Patrick E. McLean</h1>
-          <h2>Author of <a href="">&#8220;The Merchant Adventurer&#8221;</a>, <a href="">&#8220;How to Succeed in Evil&#8221;</a> and four other books. President of <a href="http://www.goodwordsrightorder.com">good words (right order)</a> a content development agency. You probably want to <a href="">join his email list</a> .
+          <h2>is an author and copywriter. His most recent book is <a href="">&#8220;The Merchant Adventurer&#8221;</a>. He has a nice <a href="">portfolio</a>. You should <a href="">join his email list</a> .
 
         
           </h2>
