updated type, fixed broken link on homepage

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -321,7 +321,7 @@
                   <p>A Way to Visualize the Hidden Structure of Stories</p>
                 </li>
               </a>
-              <a href="./writingresouces">
+              <a href="./writingresources">
                 <li>
                   <h4>good words (right order)</h4>
                   <p>A collection of resources to help you with your writing.</p>
@@ -436,10 +436,10 @@
 
     {% endif %}
 
-        <section class="footer-copyright">
+        <section class="footer">
         
-          <p>
-            Content copyright ©2005-2014 Patrick E. McLean</a>.
+          <p class="footer-copyright">
+            © 2005-2014 Patrick E. McLean</a>.
             Subscribe to the <a href="http://feeds.feedburner.com/PatrickEMcLean">RSS</a>.
           </p>
         </section>
