fixed stuff ul margin

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -301,7 +301,7 @@
 
 
 
-            <ul>
+            <ul class="stuff">
             
               <a href="./2005/seanachaiintro">
                 <li>
