--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -276,7 +276,7 @@
              <div id="mainimage">
           <img src="http://patrickemclean.com/images/paddy.png">
           </div>
-          <p id="hypno">He is hypnotic gaze urges you to...</p>
+          <p id="hypno">His hypnotic gaze urges you to...</p>
 
         <h3 id="initial-header">Join his Email List</h3>
 
