--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -436,7 +436,7 @@
         <section class="footer">
         
           <p class="footer-copyright">
-            © 2005-2014 Patrick E. McLean</a>.
+            © 2005-2014 by Patrick E. McLean</a>.
             Subscribe to the <a href="http://feeds.feedburner.com/PatrickEMcLean">RSS</a>.
           </p>
         </section>
