gplus profile link update

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -438,7 +438,10 @@
           <p class="footer-copyright">
             © 2005-2014 by Patrick E. McLean</a>.
             Subscribe to the <a href="http://feeds.feedburner.com/PatrickEMcLean">RSS</a>.
+ <a href="https://plus.google.com/u/0/+PatrickMcLeanE/?rel=author">Google</a>
+            
           </p>
+
         </section>
       </div>
     </div>
