added contact link

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -153,7 +153,7 @@
         <header class="page-introduction">
          
           <h1><a href="{{ base_url }}">Patrick E. McLean</a></h1>
-          <h2>is an author and copywriter. His most recent book is <a href="./merchantadventurer">&#8220;The Merchant Adventurer&#8221;</a>. He also has a nice <a href="http://www.behance.com/patrickemclean">portfolio</a>. 
+          <h2>is an author and copywriter. His most recent book is <a href="./merchantadventurer">&#8220;The Merchant Adventurer&#8221;</a>. He also has a nice <a href="http://www.behance.com/patrickemclean">portfolio</a>.<br>Feel free to <a href="./contact">reach out</a> to him.
 
         
           </h2>
