switched to tinyletter email subscription

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -285,12 +285,8 @@
 
 
           <div id="mc_embed_signup">
-          <form action="http://patrickemclean.us1.list-manage2.com/subscribe/post?u=602066dab95a5d4df9a118155&amp;id=0e4f154103" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </form>
-          </div>
+             <form style="text-align:center;" action="https://tinyletter.com/PatrickEMcLean" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/PatrickEMcLean', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
           
 
