rolled back mailchimp setup.

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -280,11 +280,8 @@
 
         <h3 id="initial-header">Join his Email List</h3>
 
-            <!-- Begin MailChimp Signup Form -->
-          <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+            <!-- Tiny Letter Subscription Form -->
 
-
-          <div id="mc_embed_signup">
 
              <form style="text-align:center;" action="https://tinyletter.com/PatrickEMcLean" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/PatrickEMcLean', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
 
