mean old man title

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -280,7 +280,7 @@
 
 
             <li>
-              <i>Bastard (working title)</i>
+              <i>Mean Old Man (working title)</i>
 
               <div class="progressbar">
 
@@ -332,7 +332,7 @@
 
           </ul>
 
-
+<iframe src="http://patrickemclean.tumblr.com”></" width="400" height="400" frameborder="0"></iframe> 
             <h3>The Good Stuff</h3>
 
 
