--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -272,8 +272,8 @@
               <i>The Soak (working title)</i>
               <div class="progressbar">
 
-                <div class="progressfill" style="width:93%"><br></div>
-                65462 / 70000 words 93% done
+                <div class="progressfill" style="width:100%"><br></div>
+                70000 words DRAFT COMPLETE!
                 
               </div>
             </li>
