minor typo correction

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -342,7 +342,7 @@
                 <a href="./2005/seanachaiintro">
                 <li>
                   <h4>Getting Shot</h4>
-                  <p>True Story, I once got shot. Obviously, I had to write about it.</p>
+                  <p>True story, I once got shot. Obviously, I had to write about it.</p>
                 </li>
               </a>
               <a href="./2005/seanachaiintro">
