--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -280,13 +280,13 @@
 
 
             <li>
-              <i>Mean Old Man (working title)</i>
+              <i>The Death of Grace</i>
 
               <div class="progressbar">
 
-                <div class="progressfill" style="width:50%"><br></div>
+                <div class="progressfill" style="width:81%"><br></div>
 
-                30361 / 60000 50% done
+                40797 / 55000 81% done
 
               </div>
             </li>
