added nother hero counter

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -330,6 +330,18 @@
             </div>
             </li>
 
+            <li>
+              <i>HtSiE: We Don't Need Another Hero (working title)</i>
+
+              <div class="progressbar">
+
+                <div class="progressfill" style="width:7%"><br></div>
+
+                4450 / 60000 7% done
+              
+            </div>
+            </li>
+
           </ul>
 
 
