updated word coutners

--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -272,7 +272,7 @@
               <i>The Soak (working title)</i>
               <div class="progressbar">
 
-                <div class="progressfill" style="width:100%"><br></div>
+                <div class="progressfill" style="width:100%; background-color:green"><br></div>
                 70000 words DRAFT COMPLETE!
                 
               </div>
@@ -284,9 +284,9 @@
 
               <div class="progressbar">
 
-                <div class="progressfill" style="width:85%"><br></div>
+                <div class="progressfill" style="width:101%; background-color:green"><br></div>
 
-                47012 / 55000 85% done
+                55610 / 55000 101% done
 
               </div>
             </li>
@@ -335,9 +335,9 @@
 
               <div class="progressbar">
 
-                <div class="progressfill" style="width:7%"><br></div>
+                <div class="progressfill" style="width:9%"><br></div>
 
-                4450 / 60000 7% done
+                5920 / 60000 9% done
               
             </div>
             </li>
