--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -286,7 +286,7 @@
 
                 <div class="progressfill" style="width:101%; background-color:green"><br></div>
 
-                55610 / 55000 101% done
+                55610 / 55000 101% DRAFT COMPLETE!
 
               </div>
             </li>
