--- a/themes/simpledoc/index.html
+++ b/themes/simpledoc/index.html
@@ -273,7 +273,7 @@
               <div class="progressbar">
 
                 <div class="progressfill" style="width:100%; background-color:green"><br></div>
-                70000 words DRAFT COMPLETE!
+                70000 words DRAFT!
                 
               </div>
             </li>
@@ -286,7 +286,7 @@
 
                 <div class="progressfill" style="width:101%; background-color:green"><br></div>
 
-                55610 / 55000 101% DRAFT COMPLETE!
+                55610 / 55000 101% DRAFT!
 
               </div>
             </li>
@@ -335,9 +335,9 @@
 
               <div class="progressbar">
 
-                <div class="progressfill" style="width:9%"><br></div>
+                <div class="progressfill" style="width:18%"><br></div>
 
-                5920 / 60000 9% done
+                11190 / 60000 18% done
               
             </div>
             </li>
